--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
-    <h1>Enter a city for the Weather</h1>
-
-    <form action="/action_page.php">>
-        <label for="city">City:</label>
-        <input id="city" type="text" name="cityName">
-        <input id="getWeather" type="submit" value="Get Weather">
-    </form>
+    <nav class="navbar">
+        <h2 class="weatherHeader text-white ps-3 m-0 bg"><i class="fas fa-sun"></i>&nbsp;What's the Weather?&nbsp;<i class="fas fa-umbrella"></i></h2>
+        <div class="d-flex justify-content-center w-100">
+            <form class="pe-3" id="getWeatherForm" action="/action_page.php">
+                <label class="text-white" for="city">City:</label>
+                <input id="city" type="text" name="cityName">
+                <!-- <input type="submit" value="Get Weather"> -->
+                <button type="submit" id="getWeatherButton"><i class="fas fa-cloud-sun"></i>&nbsp;Get Weather</i></button>
+            </form>
+        </div>
+    </nav>
+    <div class="d-flex flex-column align-items-center" id=weatherContainer></div>
 
     <script src="https://kit.fontawesome.com/35bf133ef1.js" crossorigin="anonymous"></script>
     <script src="scripts/main.js"></script>
